# PyDynSys

./: .gitignore  404.html  CHANGELOG.md  MANIFEST.in  README.md  index.html  mkdocs.yml  notebook_critique.md  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  testing.yml
api/core/: index.html
api/core/euclidean/: index.html
api/core/euclidean/phase_space/: index.html
api/core/euclidean/time_horizon/: index.html
api/core/euclidean/trajectory/: index.html
api/core/euclidean/trajectory_segment/: index.html
api/vis/: index.html
api/vis/euclidean/: index.html
api/vis/euclidean/phase_space/: index.html
contributing/contributing/: index.html
docs/: README.md  index.md
docs/api/: core.md  vis.md
docs/api/core/: euclidean.md
docs/api/core/euclidean/: phase_space.md  time_horizon.md  trajectory.md  trajectory_segment.md
docs/api/vis/: euclidean.md
docs/api/vis/euclidean/: phase_space.md
docs/contributing/: contributing.md
docs/examples/: phase_spaces_and_time_horizons.ipynb  phase_spaces_time_horizons_and_vector_fields.ipynb
docs/getting_started/: installation.md  quickstart.md
examples/: 01_harmonic_oscillator.py  02_driven_oscillator.py  03_symbolic_construction.py  04_bidirectional_integration.py  05_phase_space_constraints.py  06_performance_optimisation.py  07_trajectory_composition.py  README.md  run_examples.ps1  run_examples.sh
examples/phase_spaces_and_time_horizons/: index.html
getting_started/installation/: index.html
javascript/: katex-config.js
notebooks/: README.md
notebooks/chaos/: lyapunov.ipynb
notebooks/examples/: damped_pendulum.ipynb  double_pendulum.ipynb  n_pendulum.ipynb  pendulum.ipynb
notebooks/systems/: euclidean_dynamical_systems.ipynb  planar_euclidean_dynamical_systems.ipynb
search/: search_index.json
src/PyDynSys/: __init__.py
src/PyDynSys/analysis/: existence.py
src/PyDynSys/core/: __init__.py  sym_utils.py  types.py
src/PyDynSys/core/base/: autonomous.py  common.py  non_autonomous.py
src/PyDynSys/core/euclidean/: __init__.py  autonomous.py  base.py  non_autonomous.py  phase_space.py  time_horizon.py  trajectory.py
src/PyDynSys/core/euclidean_sys/: __init__.py  autonomous.py  base.py  non_autonomous.py  phase_space.py  time_horizon.py
src/PyDynSys/core/properties/: __init__.py  linear.py  registry.py
src/PyDynSys/core/support/: cache.py  phase_space.py  time_horizon.py  trajectory.py  vector_field.py
src/PyDynSys/core/utils/: __init__.py  sym.py
src/PyDynSys/vis/: __init__.py
src/PyDynSys/vis/euclidean/: __init__.py  phase_space.py
tests/: README.md  conftest.py
tests/core/: conftest.py  test_autonomous_euclidean_ds.py  test_base_euclidean_ds.py  test_non_autonomous_euclidean_ds.py  test_physics_energy_and_numerical.py  test_symbolic_builder.py  test_types_phase_space_time.py
tests/core/euclidean/: test_phase.py  test_time.py
